# qalarmclock

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerSettings.cmake
src/: CMakeLists.txt  global.h  main.cpp  qalarmclockapp.cpp  qalarmclockapp.h  qalarmclocksystray.cpp  qalarmclocksystray.h
